@@ -7,7 +7,8 @@ This file is generated! See scripts/docs_collector.py
 
 beta[]
 
-This is the Windows module.
+This is the Windows module. It collects metrics from Windows systems,
+by default metricset `service` is enabled.
 
 
 [float]
@@ -20,12 +21,6 @@ in <<configuration-metricbeat>>. Here is an example configuration:
 ----
 metricbeat.modules:
 - module: windows
-  metricsets: ["perfmon"]
-  period: 10s
-  perfmon.counters:
-
-- module: windows
-  metricsets: ["service"]
   period: 60s
 ----
 
