@@ -1,1 +1,2 @@
-This is the Windows module.
+This is the Windows module. It collects metrics from Windows systems,
+by default metricset `service` is enabled.
